# summarize_recent_commit

./: .env.sample  Cargo.toml  README.md  git_commit_summaries.md  same_logic_WIP.py  sample_logs.txt
data/: commit_state.json
src/: main.rs
